force-app/main/default/objects/DEPARTMENT__x/DEPARTMENT__x.object-meta.xml
<CustomObject>
    <description>DEPARTMENT</description>
    <externalDataSource>testSnowflake</externalDataSource>
    <externalName>TESTDB.MYSCHEMA.DEPARTMENT</externalName>
    <label>DEPARTMENT</label>
    <pluralLabel>DEPARTMENT</pluralLabel>
</CustomObject>