force-app/main/default/objects/DEPARTMENT__x/fields/DEPARTMENTNAME__c.field-meta.xml
<CustomField>
    <fullName>DEPARTMENTNAME__c</fullName>
    <externalDeveloperName>DEPARTMENTNAME</externalDeveloperName>
    <label>DEPARTMENTNAME</label>
    <length>25</length>
    <type>Text</type>
</CustomField>