force-app/main/default/objects/DEPARTMENT__x/fields/DID__c.field-meta.xml
<CustomField>
    <fullName>DID__c</fullName>
    <externalDeveloperName>DID</externalDeveloperName>
    <label>DID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>