force-app/main/default/objects/DEPARTMENT__x/fields/EXTERNALID__c.field-meta.xml
<CustomField>
    <fullName>EXTERNALID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <externalDeveloperName>EXTERNALID</externalDeveloperName>
    <label>EXTERNALID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DEPARTMENT</relationshipLabel>
    <relationshipName>DEPARTMENT</relationshipName>
    <type>Lookup</type>
</CustomField>