force-app/main/default/objects/DEPARTMENT__x/fields/LOCATION__c.field-meta.xml
<CustomField>
    <fullName>LOCATION__c</fullName>
    <externalDeveloperName>LOCATION</externalDeveloperName>
    <label>LOCATION</label>
    <length>25</length>
    <type>Text</type>
</CustomField>